--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,10 +5,11 @@ body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    color: #2c3e50;
 }
 
 #canvas {
     width: 100%;
     height: 100%;
     display: block;
-  }
+}
