--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,11 +7,13 @@ body{
     box-sizing: border-box;
     color: white;
     background-color: black;
+    overflow: auto;
+    /*overflow: hidden;*/
 }
 
 #canvas {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     display: block;
 }
 
